Bug 80893 - [BSW]igt/drv_debugfs_reader causes system hang
Summary: [BSW]igt/drv_debugfs_reader causes system hang
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: high normal
Assignee: Mika Kuoppala
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-04 06:15 UTC by Guo Jinxian
Modified: 2017-10-06 14:37 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Guo Jinxian 2014-07-04 06:15:39 UTC
==System Environment==
--------------------------
Regression: No. 
It's first time to run the test.

Non-working platforms: BSW

==kernel==
--------------------------
origin/drm-intel-nightly: eb638c7fabe97a9df752aeb2f59a9463ce4aed8e(fails)
    drm-intel-nightly: 2014y-07m-03d-14h-50m-16s integration manifest
origin/drm-intel-next-queued: 5e59f7175f96550ede91f58d267d2b551cb6fbba(fails)
    drm/i915: Try harder to get FBC  
origin/drm-intel-fixes: 5549d25f642a7e6cfb8744d0031a9da404f696d6(fails)
    drm/i915: Drop early VLV WA to fix Voltage not getting dropped to Vmin

==Bug detailed description==
Run the case drv_debugfs_reader, system hangs and haven't any outputs. Because the system hang, we can not get dmesg.

Output:
[root@x-bsw01 tests]# ./drv_debugfs_reader



==Reproduce steps==
---------------------------- 
1. ./drv_debugfs_reader
Comment 1 Guo Jinxian 2014-07-11 03:41:05 UTC
Test pass on latest -nightly(16025dad8e9964a5810385f755d43f1c48d6fdcc).
Comment 2 Elizabeth 2017-10-06 14:37:23 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.